--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -150,10 +151,6 @@
         android:clickable="false"
         android:focusable="false" />
 
-<!--    <FrameLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/bottom_navigation"/>-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -181,5 +178,18 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         style="@style/SWITCH"/>
+
+    <FrameLayout
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp" />
 
 </RelativeLayout>
